Hopefully actually fixed Ice Punch and ThunderPunch this time.
Junko now gets Belligerent instead of Pure Furies.
Pristine Shot and Exterminate now bypass the target's Ability if it would weaken or prevent the move.
Renamed Dam Breakage to Dam Breach (which it already was in the documentation).
Moved TM44 Rest and TM60 Endure (to the clerk with the status tms one tile over).
Fixed bug where physical fire moves wouldn't defrost the target.
Play Ghost no longer claims credit for avoiding super-effective attacks that simply missed.
Fixed some gen 3 quirks when enduring a move while already at 1 HP:
 -Contact/reaction abilities now actually trigger
 -Focus Punch will now be interrupted
 -Revenge's damage will now be doubled

v1.1.1

Fix the fight codes.

v1.1.0

The mart questionnaire now offers a bunch of cheat functions for those who know the secret words.
Some Cut trees stay removed once cut down.
 - The ones related to Erika are a deliberate exception to this.
Entering the Hall of Fame now removes the restrictions on the Move Tutor.
 - This is not retroactive; old saves will need to beat the Champion again.
Fixed TYumemi's and Shion's backsprites.
Touched up AShinki's sprites a bit (thanks BluShell)
Fixed many instances of mons learning moves by level but not by TM, or learning a move twice.
AdCirno now learns Revenge.
DRemilia now learns Defense Curl (might be too much)
Rotated some Alice moves around to prevent Dark Alice from having Substitute.
AdAlice now learns Sweet Kiss.
SWriggle can now be TM'd Thunder Wave.
All Mystia forms now learn Cut.
Non-chibi Eiki forms now learn Torment.
Shizuha and SShizuha now learn Burn Powder.
Entire Momiji line can now be TM'd Spikes.
Sanae now learns Whirlwind.
Entire Kogasa line can now be TM'd Extrasensory.
Murasa now learns Bulk Up.
Entire Luna line can now be TM'd Mirror Coat.
Entire Kokoro line can now be TM'd Counter.
Entire Shinmyoumaru line can now be TM'd Psycho Cut.
Seiran now learns Agility.