@@ -16,6 +16,7 @@ struct MonCoords
 
 extern const u8 gSpeciesNames[][POKEMON_NAME_LENGTH + 1];
 extern const u8 gMoveNames[][15];
+extern const u8 gMoveNamesAbridged[][15];
 extern const u16 gUnknown_8251CB8[];
 extern const u16 gUnknown_8251FEE[];
 extern const u16 gUnknown_8252324[];
