@@ -8,6 +8,7 @@ Junko now gets Belligerent instead of Pure Furies.
 Pristine Shot and Exterminate now bypass the target's Ability if it would weaken or prevent the move.
 Renamed Dam Breakage to Dam Breach (which it already was in the documentation).
 Moved TM44 Rest and TM60 Endure (to the clerk with the status tms one tile over).
+Addressed Ball Lightning's name being too long for the battle interface.
 Fixed bug where physical fire moves wouldn't defrost the target.
 Play Ghost no longer claims credit for avoiding super-effective attacks that simply missed.
 Fixed some gen 3 quirks when enduring a move while already at 1 HP:
